bug fix with icon vertical alignemnt

--- a/_includes/css/contact.css
+++ b/_includes/css/contact.css
@@ -16,7 +16,7 @@
 .contact-info-block .ci-icon {
   position: absolute;
   top: 50%;
-  margin-top: -27px;
+  margin-top: -30px;
 }
 
 .contact-info-block .ci-icon .fa {
